--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/supabase-js": "^2.2.2",
+		"bcryptjs": "^2.4.3",
+		"rollup-plugin-css-only": "^4.3.0",
+		"supabase": "^1.27.10"
+	}
 }
